--- a/index.html
+++ b/index.html
@@ -7,41 +7,13 @@
 	<link rel="stylesheet" href="css/style.css" type="text/css" media="screen" />
 	
 	<script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
-	<!-- <style type="text/css">
-		.description {
-			position: fixed;
-			right: 10px;
-			top: 10px;
-			font-size: 12px;
-			color: #888;
-		}
-
-		span.reference {
-			position: fixed;
-			left: 10px;
-			bottom: 10px;
-			font-size: 12px;
-		}
-
-		span.reference a {
-			color: #888;
-			text-transform: uppercase;
-			text-decoration: none;
-			padding-right: 20px;
-		}
-
-		span.reference a:hover {
-			color: #444;
-		}
-	</style> -->
 </head>
 
 <body>
 	<div style="height: 100vh;">
 		<iframe frameborder="0" scrolling="no" src="index2.html" width="100%" height="80%"></iframe>
 		<div style="height: 20%;">
-			<h1 style="text-align: center;">MXY ♡ HXF</h1>
+			<h1 style="text-align: center;">MXY 💗 HXF</h1>
 			<p id="time"></p>
 		</div>
 	</div>
