--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
 	<title>MXY ♡ HXF</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<link rel="stylesheet" href="css/style.css" type="text/css" media="screen" />
+
+	<!-- 地址栏小图标 -->
+	<link rel="Shortcut Icon" href="images/mh.png" type="image/x-icon" />
+	<!-- 收藏栏小图标 -->
+	<link rel="Bookmark" href="images/mh.png" type="image/x-icon" />
 	
 	<script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
