完善照片展示，存储源照片文件

--- a/index2.html
+++ b/index2.html
@@ -39,33 +39,33 @@
 
     <body>
 		<div id="im_wrapper" class="im_wrapper">
-			<div style="background-position:0px 0px;"><img src="http://imgbd.mxy493.xyz/mh1.jpg" alt="" /></div>
-			<div style="background-position:-125px 0px;"><img src="http://imgbd.mxy493.xyz/mh2.jpg" alt="" /></div>
-			<div style="background-position:-250px 0px;"><img src="http://imgbd.mxy493.xyz/mh3.jpg" alt="" /></div>
-			<div style="background-position:-375px 0px;"><img src="http://imgbd.mxy493.xyz/mh4.jpg" alt="" /></div>
-			<div style="background-position:-500px 0px;"><img src="http://imgbd.mxy493.xyz/mh5.jpg" alt="" /></div>
-			<div style="background-position:-625px 0px;"><img src="http://imgbd.mxy493.xyz/mh6.jpg" alt="" /></div>
+			<div style="background-position:0px 0px;"><img src="http://imgbd.mxy493.xyz/mh/mh1.jpg" alt="" /></div>
+			<div style="background-position:-125px 0px;"><img src="http://imgbd.mxy493.xyz/mh/mh2.jpg" alt="" /></div>
+			<div style="background-position:-250px 0px;"><img src="http://imgbd.mxy493.xyz/mh/mh3.jpg" alt="" /></div>
+			<div style="background-position:-375px 0px;"><img src="http://imgbd.mxy493.xyz/mh/mh4.jpg" alt="" /></div>
+			<div style="background-position:-500px 0px;"><img src="http://imgbd.mxy493.xyz/mh/mh5.jpg" alt="" /></div>
+			<div style="background-position:-625px 0px;"><img src="http://imgbd.mxy493.xyz/mh/mh6.jpg" alt="" /></div>
 
-			<div style="background-position:0px -125px;"><img src="http://imgbd.mxy493.xyz/mh7.jpg" alt="" /></div>
-			<div style="background-position:-125px -125px;"><img src="http://imgbd.mxy493.xyz/mh8.jpg" alt="" /></div>
-			<div style="background-position:-250px -125px;"><img src="http://imgbd.mxy493.xyz/mh9.jpg" alt="" /></div>
-			<div style="background-position:-375px -125px;"><img src="http://imgbd.mxy493.xyz/mh10.jpg" alt="" /></div>
-			<div style="background-position:-500px -125px;"><img src="http://imgbd.mxy493.xyz/mh11.jpg" alt="" /></div>
-			<div style="background-position:-625px -125px;"><img src="http://imgbd.mxy493.xyz/mh12.jpg" alt="" /></div>
+			<div style="background-position:0px -125px;"><img src="http://imgbd.mxy493.xyz/mh/mh7.jpg" alt="" /></div>
+			<div style="background-position:-125px -125px;"><img src="http://imgbd.mxy493.xyz/mh/mh8.jpg" alt="" /></div>
+			<div style="background-position:-250px -125px;"><img src="http://imgbd.mxy493.xyz/mh/mh9.jpg" alt="" /></div>
+			<div style="background-position:-375px -125px;"><img src="http://imgbd.mxy493.xyz/mh/mh10.jpg" alt="" /></div>
+			<div style="background-position:-500px -125px;"><img src="http://imgbd.mxy493.xyz/mh/mh11.jpg" alt="" /></div>
+			<div style="background-position:-625px -125px;"><img src="http://imgbd.mxy493.xyz/mh/mh12.jpg" alt="" /></div>
 
-			<div style="background-position:0px -250px;"><img src="http://imgbd.mxy493.xyz/mh13.jpg" alt="" /></div>
-			<div style="background-position:-125px -250px;"><img src="http://imgbd.mxy493.xyz/mh14.jpg" alt="" /></div>
-			<div style="background-position:-250px -250px;"><img src="http://imgbd.mxy493.xyz/mh15.jpg" alt="" /></div>
-			<div style="background-position:-375px -250px;"><img src="http://imgbd.mxy493.xyz/mh16.jpg" alt="" /></div>
-			<div style="background-position:-500px -250px;"><img src="http://imgbd.mxy493.xyz/mh17.jpg" alt="" /></div>
-			<div style="background-position:-625px -250px;"><img src="http://imgbd.mxy493.xyz/mh18.jpg" alt="" /></div>
+			<div style="background-position:0px -250px;"><img src="http://imgbd.mxy493.xyz/mh/mh13.jpg" alt="" /></div>
+			<div style="background-position:-125px -250px;"><img src="http://imgbd.mxy493.xyz/mh/mh14.jpg" alt="" /></div>
+			<div style="background-position:-250px -250px;"><img src="http://imgbd.mxy493.xyz/mh/mh15.jpg" alt="" /></div>
+			<div style="background-position:-375px -250px;"><img src="http://imgbd.mxy493.xyz/mh/mh16.jpg" alt="" /></div>
+			<div style="background-position:-500px -250px;"><img src="http://imgbd.mxy493.xyz/mh/mh17.jpg" alt="" /></div>
+			<div style="background-position:-625px -250px;"><img src="http://imgbd.mxy493.xyz/mh/mh18.jpg" alt="" /></div>
 
-			<div style="background-position:0px -375px;"><img src="http://imgbd.mxy493.xyz/mh19.jpg" alt="" /></div>
-			<div style="background-position:-125px -375px;"><img src="http://imgbd.mxy493.xyz/mh20.jpg" alt="" /></div>
-			<div style="background-position:-250px -375px;"><img src="http://imgbd.mxy493.xyz/mh21.jpg" alt="" /></div>
-			<div style="background-position:-375px -375px;"><img src="http://imgbd.mxy493.xyz/mh22.jpg" alt="" /></div>
-			<div style="background-position:-500px -375px;"><img src="http://imgbd.mxy493.xyz/mh22.jpg" alt="" /></div>
-			<div style="background-position:-625px -375px;"><img src="http://imgbd.mxy493.xyz/mh22.jpg" alt="" /></div>
+			<div style="background-position:0px -375px;"><img src="http://imgbd.mxy493.xyz/mh/mh19.jpg" alt="" /></div>
+			<div style="background-position:-125px -375px;"><img src="http://imgbd.mxy493.xyz/mh/mh20.jpg" alt="" /></div>
+			<div style="background-position:-250px -375px;"><img src="http://imgbd.mxy493.xyz/mh/mh21.jpg" alt="" /></div>
+			<div style="background-position:-375px -375px;"><img src="http://imgbd.mxy493.xyz/mh/mh22.jpg" alt="" /></div>
+			<div style="background-position:-500px -375px;"><img src="http://imgbd.mxy493.xyz/mh/mh23.jpg" alt="" /></div>
+			<div style="background-position:-625px -375px;"><img src="http://imgbd.mxy493.xyz/mh/mh24.jpg" alt="" /></div>
 		</div>
 		<div id="im_loading" class="im_loading"></div>
 		<div id="im_next" class="im_next"></div>
@@ -150,7 +150,7 @@
 						++loaded;
 						if(loaded == nmb_thumbs*2)
 							start();
-					}).attr('src',$this.attr('src').replace('mh',''));//.replace('/thumbs','')
+					}).attr('src',$this.attr('src').replace('mh/mh','mh/'));
 				});
 				
 				//starts the animation
@@ -244,7 +244,7 @@
 					if(mode	== 'grid'){
 						mode			= 'single';
 						//the source of the full image
-						var image_src	= $this.find('img').attr('src').replace('/thumbs','');
+						var image_src	= $this.find('img').attr('src').replace('mh/mh','mh/');
 						
 						$thumbs.each(function(i){
 							var $thumb 	= $(this);
@@ -321,7 +321,7 @@
 					++current;
 					var $next_thumb	= $im_wrapper.children('div:nth-child('+(current+1)+')');
 					if($next_thumb.length>0){
-						var image_src	= $next_thumb.find('img').attr('src').replace('mh','');
+						var image_src	= $next_thumb.find('img').attr('src').replace('mh/mh','mh/');
 						var arr 		= Array.shuffle(positionsArray.slice(0));
 						$thumbs.each(function(i){
 							//we want to change each divs background image
@@ -350,7 +350,7 @@
 					--current;
 					var $prev_thumb	= $im_wrapper.children('div:nth-child('+(current+1)+')');
 					if($prev_thumb.length>0){
-						var image_src	= $prev_thumb.find('img').attr('src').replace('mh','');
+						var image_src	= $prev_thumb.find('img').attr('src').replace('mh/mh','mh/');
 						var arr 		= Array.shuffle(positionsArray.slice(0));
 						$thumbs.each(function(i){
 							var t = $(this);
