--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 	<link rel="stylesheet" href="css/style.css" type="text/css" media="screen" />
 
 	<!-- 地址栏小图标 -->
-	<link rel="Shortcut Icon" href="images/mh.png" type="image/x-icon" />
+	<link rel="Shortcut Icon" href="images/mh.webp" type="image/x-icon" />
 	<!-- 收藏栏小图标 -->
-	<link rel="Bookmark" href="images/mh.png" type="image/x-icon" />
+	<link rel="Bookmark" href="images/mh.webp" type="image/x-icon" />
 	
 	<script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
