--- a/index2.html
+++ b/index2.html
@@ -39,33 +39,33 @@
 
     <body>
 		<div id="im_wrapper" class="im_wrapper">
-			<div style="background-position:0px 0px;"><img src="http://imgbd.mxy493.xyz/mh/mh1.webp" alt="" /></div>
-			<div style="background-position:-125px 0px;"><img src="http://imgbd.mxy493.xyz/mh/mh2.webp" alt="" /></div>
-			<div style="background-position:-250px 0px;"><img src="http://imgbd.mxy493.xyz/mh/mh3.webp" alt="" /></div>
-			<div style="background-position:-375px 0px;"><img src="http://imgbd.mxy493.xyz/mh/mh4.webp" alt="" /></div>
-			<div style="background-position:-500px 0px;"><img src="http://imgbd.mxy493.xyz/mh/mh5.webp" alt="" /></div>
-			<div style="background-position:-625px 0px;"><img src="http://imgbd.mxy493.xyz/mh/mh6.webp" alt="" /></div>
+			<div style="background-position:0px 0px;"><img src="images/webp/mh/1.webp" alt="" /></div>
+			<div style="background-position:-125px 0px;"><img src="images/webp/mh/2.webp" alt="" /></div>
+			<div style="background-position:-250px 0px;"><img src="images/webp/mh/3.webp" alt="" /></div>
+			<div style="background-position:-375px 0px;"><img src="images/webp/mh/4.webp" alt="" /></div>
+			<div style="background-position:-500px 0px;"><img src="images/webp/mh/5.webp" alt="" /></div>
+			<div style="background-position:-625px 0px;"><img src="images/webp/mh/6.webp" alt="" /></div>
 
-			<div style="background-position:0px -125px;"><img src="http://imgbd.mxy493.xyz/mh/mh7.webp" alt="" /></div>
-			<div style="background-position:-125px -125px;"><img src="http://imgbd.mxy493.xyz/mh/mh8.webp" alt="" /></div>
-			<div style="background-position:-250px -125px;"><img src="http://imgbd.mxy493.xyz/mh/mh9.webp" alt="" /></div>
-			<div style="background-position:-375px -125px;"><img src="http://imgbd.mxy493.xyz/mh/mh10.webp" alt="" /></div>
-			<div style="background-position:-500px -125px;"><img src="http://imgbd.mxy493.xyz/mh/mh11.webp" alt="" /></div>
-			<div style="background-position:-625px -125px;"><img src="http://imgbd.mxy493.xyz/mh/mh12.webp" alt="" /></div>
+			<div style="background-position:0px -125px;"><img src="images/webp/mh/7.webp" alt="" /></div>
+			<div style="background-position:-125px -125px;"><img src="images/webp/mh/8.webp" alt="" /></div>
+			<div style="background-position:-250px -125px;"><img src="images/webp/mh/9.webp" alt="" /></div>
+			<div style="background-position:-375px -125px;"><img src="images/webp/mh/10.webp" alt="" /></div>
+			<div style="background-position:-500px -125px;"><img src="images/webp/mh/11.webp" alt="" /></div>
+			<div style="background-position:-625px -125px;"><img src="images/webp/mh/12.webp" alt="" /></div>
 
-			<div style="background-position:0px -250px;"><img src="http://imgbd.mxy493.xyz/mh/mh13.webp" alt="" /></div>
-			<div style="background-position:-125px -250px;"><img src="http://imgbd.mxy493.xyz/mh/mh14.webp" alt="" /></div>
-			<div style="background-position:-250px -250px;"><img src="http://imgbd.mxy493.xyz/mh/mh15.webp" alt="" /></div>
-			<div style="background-position:-375px -250px;"><img src="http://imgbd.mxy493.xyz/mh/mh16.webp" alt="" /></div>
-			<div style="background-position:-500px -250px;"><img src="http://imgbd.mxy493.xyz/mh/mh17.webp" alt="" /></div>
-			<div style="background-position:-625px -250px;"><img src="http://imgbd.mxy493.xyz/mh/mh18.webp" alt="" /></div>
+			<div style="background-position:0px -250px;"><img src="images/webp/mh/13.webp" alt="" /></div>
+			<div style="background-position:-125px -250px;"><img src="images/webp/mh/14.webp" alt="" /></div>
+			<div style="background-position:-250px -250px;"><img src="images/webp/mh/15.webp" alt="" /></div>
+			<div style="background-position:-375px -250px;"><img src="images/webp/mh/16.webp" alt="" /></div>
+			<div style="background-position:-500px -250px;"><img src="images/webp/mh/17.webp" alt="" /></div>
+			<div style="background-position:-625px -250px;"><img src="images/webp/mh/18.webp" alt="" /></div>
 
-			<div style="background-position:0px -375px;"><img src="http://imgbd.mxy493.xyz/mh/mh19.webp" alt="" /></div>
-			<div style="background-position:-125px -375px;"><img src="http://imgbd.mxy493.xyz/mh/mh20.webp" alt="" /></div>
-			<div style="background-position:-250px -375px;"><img src="http://imgbd.mxy493.xyz/mh/mh21.webp" alt="" /></div>
-			<div style="background-position:-375px -375px;"><img src="http://imgbd.mxy493.xyz/mh/mh22.webp" alt="" /></div>
-			<div style="background-position:-500px -375px;"><img src="http://imgbd.mxy493.xyz/mh/mh23.webp" alt="" /></div>
-			<div style="background-position:-625px -375px;"><img src="http://imgbd.mxy493.xyz/mh/mh24.webp" alt="" /></div>
+			<div style="background-position:0px -375px;"><img src="images/webp/mh/19.webp" alt="" /></div>
+			<div style="background-position:-125px -375px;"><img src="images/webp/mh/20.webp" alt="" /></div>
+			<div style="background-position:-250px -375px;"><img src="images/webp/mh/21.webp" alt="" /></div>
+			<div style="background-position:-375px -375px;"><img src="images/webp/mh/22.webp" alt="" /></div>
+			<div style="background-position:-500px -375px;"><img src="images/webp/mh/23.webp" alt="" /></div>
+			<div style="background-position:-625px -375px;"><img src="images/webp/mh/24.webp" alt="" /></div>
 		</div>
 		<div id="im_loading" class="im_loading"></div>
 		<div id="im_next" class="im_next"></div>
@@ -150,7 +150,7 @@
 						++loaded;
 						if(loaded == nmb_thumbs*2)
 							start();
-					}).attr('src',$this.attr('src').replace('mh/mh','mh/'));
+					}).attr('src',$this.attr('src').replace('mh/',''));
 				});
 				
 				//starts the animation
@@ -244,7 +244,7 @@
 					if(mode	== 'grid'){
 						mode			= 'single';
 						//the source of the full image
-						var image_src	= $this.find('img').attr('src').replace('mh/mh','mh/');
+						var image_src	= $this.find('img').attr('src').replace('mh/','');
 						
 						$thumbs.each(function(i){
 							var $thumb 	= $(this);
@@ -321,7 +321,7 @@
 					++current;
 					var $next_thumb	= $im_wrapper.children('div:nth-child('+(current+1)+')');
 					if($next_thumb.length>0){
-						var image_src	= $next_thumb.find('img').attr('src').replace('mh/mh','mh/');
+						var image_src	= $next_thumb.find('img').attr('src').replace('mh/','');
 						var arr 		= Array.shuffle(positionsArray.slice(0));
 						$thumbs.each(function(i){
 							//we want to change each divs background image
@@ -350,7 +350,7 @@
 					--current;
 					var $prev_thumb	= $im_wrapper.children('div:nth-child('+(current+1)+')');
 					if($prev_thumb.length>0){
-						var image_src	= $prev_thumb.find('img').attr('src').replace('mh/mh','mh/');
+						var image_src	= $prev_thumb.find('img').attr('src').replace('mh/','');
 						var arr 		= Array.shuffle(positionsArray.slice(0));
 						$thumbs.each(function(i){
 							var t = $(this);
